# learn_django

./: .gitignore  pyproject.toml
app/: settings.py  urls.py
contents/: urls.py  views.py
contents/templates/: home.html
contents/templates/contents/pages/: content-details.html  home.html
contents/templates/contents/partials/: base-content.html  card.html  head.html  header.html
